--- a/index.html
+++ b/index.html
@@ -19,23 +19,30 @@
 </head>
 <body>
 
-  <div class="product-detail-card">
-    <div class="img-container">
+  <main>
+    <div class="product-detail-card">
+
+      <img class="product--img" alt="" src="./images/image-product-mobile.jpg">
+      
+      <div class="product--info">
+        <p class="info--category">PERFUME</p>
+        <h1 class="info--product-title">Gabrielle Essence Eau De Parfum</h1>
+        <p class="info--text">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.</p>
+        <p class="info--price"> $149.99 
+          <sup><s>$169.99</s> </sup>
+        </p>
+  
+        <button class="info--add-button">
+          <img src="images/icon-cart.svg" alt="icono de un carrito de compras">
+          Add to Cart
+        </button>
+      </div>
+
 
     </div>
-    <div class="info-container">
-      <p class="info--category">Perfume</p>
-      <h2 class="info--product-title">Gabrielle Essence Eau De Parfum</h2>
-      <p class="info--text">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-        Perfumer-Creator for the House of CHANEL.</p>
-      <p class="info--price"> $149.99 <sup><s>$169.99</s> </sup></p>
+  </main>
 
-      <button class="info--add-button">
-        <img src="images/icon-cart.svg" alt="icono de un carrito de compras">
-        Add to Cart
-      </button>
-    </div>
-  </div>
 
   <!-- Preview
 
