--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Es una web de pruebas sobrun reto en Frontend Mentor">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -22,14 +23,14 @@
   <main>
     <div class="product-detail-card">
 
-      <img class="product--img" alt="" 
+      <img class="product--img" alt="Imagen del un perfume rodeadod de hojas" 
       src="./images/image-product-mobile.jpg"
       srcset="./images/image-product-mobile.jpg 680w, 
               ./images/image-product-desktop.jpg 600w"
       sizes="(max-width : 500px) 680px, 600px">
       
       <div class="product--info">
-        <p class="info--category">PERFUME</p>
+        <h3 class="info--category">PERFUME</h3>
         <h1 class="info--product-title">Gabrielle Essence Eau De Parfum</h1>
         <p class="info--text">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
           Perfumer-Creator for the House of CHANEL.</p>
@@ -48,21 +49,9 @@
   </main>
 
 
-  <!-- Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart -->
-  
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="http://yusei-0.github.io">Juseph Ortiz</a>.
+  </div>
 </body>
 </html>
