Añadiendo lazy loading a las img y ajustuando icono

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       src="./images/image-product-mobile.jpg"
       srcset="./images/image-product-mobile.jpg 680w, 
               ./images/image-product-desktop.jpg 600w"
-      sizes="(max-width : 500px) 680px, 600px">
+      sizes="(max-width : 500px) 680px, 600px"
+      loading="lazy">
       
       <div class="product--info">
         <h3 class="info--category">PERFUME</h3>
@@ -39,7 +40,7 @@
         </p>
   
         <button class="info--add-button">
-          <img src="images/icon-cart.svg" alt="icono de un carrito de compras">
+          <img src="images/icon-cart.svg" alt="icono de un carrito de compras" width="15px">
           Add to Cart
         </button>
       </div>
