Cambiando css in line a el style.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <div class="product-detail-card">
 
-      <img class="product--img" alt="Imagen del un perfume rodeadod de hojas" 
+      <img class="product--img" alt="Imagen del un perfume rodeado de hojas" 
       src="./images/image-product-mobile.jpg"
       srcset="./images/image-product-mobile.jpg 680w, 
               ./images/image-product-desktop.jpg 600w"
@@ -40,7 +40,7 @@
         </p>
   
         <button class="info--add-button">
-          <img src="images/icon-cart.svg" alt="icono de un carrito de compras" width="15px">
+          <img src="images/icon-cart.svg" alt="icono de un carrito de compras">
           Add to Cart
         </button>
       </div>
