--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="product-detail-card">
 
       <img class="product--img" alt="Imagen del un perfume rodeado de hojas" 
-      src="./images/image-product-mobile.jpg"
       srcset="./images/image-product-mobile.jpg 680w, 
               ./images/image-product-desktop.jpg 600w"
-      sizes="(max-width : 500px) 680px, 600px"
+      sizes="(min-width : 500px) 680x, 
+             (min-width: 1000px) 600px"
       loading="lazy">
       
       <div class="product--info">
