Arreglado html semantic del card

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <main>
-    <div class="product-detail-card">
+    <article class="product-detail-card">
 
       <img class="product--img" alt="Imagen del un perfume rodeado de hojas" 
       srcset="./images/image-product-mobile.jpg 680w, 
@@ -45,8 +45,7 @@
         </button>
       </div>
 
-
-    </div>
+    </article>
   </main>
 
 
