--- a/index.html
+++ b/index.html
@@ -1,61 +1,1 @@
-<<<<<<< HEAD
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="description" content="Es una web de pruebas sobrun reto en Frontend Mentor"><meta name="viewport" content="width=device-width,initial-scale=1"><!-- displays site properly based on user's device --><link rel="stylesheet" href="style.min.css"><link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet"><title>Frontend Mentor | Product preview card component</title><!-- Feel free to remove these styles or customise in your own stylesheet 👍 --><style>.attribution{font-size:11px;text-align:center}.attribution a{color:#3d51a2}</style></head><body><main><div class="product-detail-card"><img class="product--img" alt="Imagen del un perfume rodeado de hojas" srcset="./images/image-product-mobile.jpg 680w, ./images/image-product-desktop.jpg 600w" sizes="(min-width : 500px) 680x,(min-width: 1000px) 600px" loading="lazy"><div class="product--info"><h3 class="info--category">PERFUME</h3><h1 class="info--product-title">Gabrielle Essence Eau De Parfum</h1><p class="info--text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p><p class="info--price">$149.99 <sup><s>$169.99</s></sup></p><button class="info--add-button"><img src="images/icon-cart.svg" alt="icono de un carrito de compras"> Add to Cart</button></div></div></main><div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="http://yusei-0.github.io">Juseph Ortiz</a>.</div></body></html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Es una web de pruebas sobrun reto en Frontend Mentor">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-  
-  <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  <main>
-    <article class="product-detail-card">
-
-      <img class="product--img" alt="Imagen del un perfume rodeado de hojas" 
-      srcset="./images/image-product-mobile.jpg 680w, 
-              ./images/image-product-desktop.jpg 600w"
-      sizes="(min-width : 500px) 680x, 
-             (min-width: 1000px) 600px"
-      loading="lazy">
-      
-      <div class="product--info">
-        <h3 class="info--category">PERFUME</h3>
-        <h1 class="info--product-title">Gabrielle Essence Eau De Parfum</h1>
-        <p class="info--text">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-          Perfumer-Creator for the House of CHANEL.</p>
-        <p class="info--price"> $149.99 
-          <sup><s>$169.99</s> </sup>
-        </p>
-  
-        <button class="info--add-button">
-          <img src="images/icon-cart.svg" alt="icono de un carrito de compras">
-          Add to Cart
-        </button>
-      </div>
-
-    </article>
-  </main>
-
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="http://yusei-0.github.io">Juseph Ortiz</a>.
-  </div>
-</body>
-</html>
->>>>>>> main
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="description" content="Es una web de pruebas sobrun reto en Frontend Mentor"><meta name="viewport" content="width=device-width,initial-scale=1"><!-- displays site properly based on user's device --><link rel="stylesheet" href="style.min.css"><link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet"><title>Frontend Mentor | Product preview card component</title><!-- Feel free to remove these styles or customise in your own stylesheet 👍 --><style>.attribution{font-size:11px;text-align:center}.attribution a{color:#3d51a2}</style></head><body><main><article class="product-detail-card"><img class="product--img" alt="Imagen del un perfume rodeado de hojas" srcset="./images/image-product-mobile.jpg 680w, ./images/image-product-desktop.jpg 600w" sizes="(min-width : 500px) 680x,(min-width: 1000px) 600px" loading="lazy"><div class="product--info"><h3 class="info--category">PERFUME</h3><h1 class="info--product-title">Gabrielle Essence Eau De Parfum</h1><p class="info--text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p><p class="info--price">$149.99 <sup><s>$169.99</s></sup></p><button class="info--add-button"><img src="images/icon-cart.svg" alt="icono de un carrito de compras"> Add to Cart</button></div></article></main><div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="http://yusei-0.github.io">Juseph Ortiz</a>.</div></body></html>
